Убрали лишние комментарии и ф-ии

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/uikit/css/uikit.min.css" />
     <script src="%PUBLIC_URL%/uikit/js/uikit.min.js"></script>
     <script src="%PUBLIC_URL%/uikit/js/uikit-icons.min.js"></script>
-    <title>Weather React App</title>
+    <title>Proverkin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
